--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>If you love coding as much as i do!</h3>
+      <h3 class="ifyou">If you love coding as much as i do!</h3>
       <p class="message">"Are you interested in learning about the specific code and elements that go into building this website?"</p>
 
       
@@ -54,7 +54,6 @@
       <img class="w3c" src="image/w3c.png" alt="">
     </a>
     <div class="links">
-      
       <a class="footer-link1" href="https://www.linkedin.com/in/ismail-olayinka-5617a025b/">LinkedIn</a>
       <a class="footer-link2" href="https://www.facebook.com/lekan.yinka.7">Facebook</a>
       <a class="footer-link3" href="https://www.westtechsolutions.co.uk/">Website</a>
